# 3DViewer_v2

./: CMakeLists.txt  README.md
src/includes/: Controller.h  MainView.h  Model.h  OpenGLWidget.h  config.h
src/sources/: Controller.cc  MainView.cc  Model.cc  OpenGLWidget.cc  main.cc
src/sources/shaders/: point_fragment  point_vertex
src/sources/ui/: MainView.ui
